// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Flex /> components composition should render a child by applying flex and space properties 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 dAAVna Spaceweb__Space-sc-1fdjx97-0 jSrHfV"
  >
    <span
      class="Viewweb__View-sc-11897uc-0 kVbtsq"
    >
      Flex Item #1
    </span>
    <span
      class="Viewweb__View-sc-11897uc-0 kVbtsq"
    >
      Flex Item #2
    </span>
  </div>
</div>
`;

exports[`<Flex /> flex should render a an inline styled child with flex property 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Spaceweb__Space-sc-1fdjx97-0 jSrHfV Flexweb__Flex-sc-10onnkk-0 epKApN"
    style="background-color: red; height: 100px;"
  >
    <div
      class="Textweb__Text-sc-1qdvl51-0 diSxms"
      color="shade.980"
      data-testid="ds-text"
    >
      Flex Item #1
    </div>
    <div
      class="Textweb__Text-sc-1qdvl51-0 diSxms"
      color="shade.980"
      data-testid="ds-text"
    >
      Flex Item #2
    </div>
  </div>
</div>
`;

exports[`<Flex /> flexDirection should render a child with flexDirection row 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 dAAVna"
  >
    <div
      class="Textweb__Text-sc-1qdvl51-0 diSxms Spaceweb__Space-sc-1fdjx97-0 jSrHfV"
      color="shade.980"
      data-testid="ds-text"
    >
      Flex Item #1
    </div>
    <div
      class="Textweb__Text-sc-1qdvl51-0 diSxms Spaceweb__Space-sc-1fdjx97-0 jSrHfV"
      color="shade.980"
      data-testid="ds-text"
    >
      Flex Item #2
    </div>
  </div>
</div>
`;
